--- a/controller_android/app/src/main/AndroidManifest.xml
+++ b/controller_android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         <activity
             android:name=".activity.devicelist.DeviceListActivity"
             android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+        <activity android:name=".activity.controller.ControllerActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
