--- a/controller_android/app/src/main/AndroidManifest.xml
+++ b/controller_android/app/src/main/AndroidManifest.xml
@@ -23,9 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activity.controller.ControllerActivity"
-            android:exported="true" />
+        <activity android:name=".activity.controller.ControllerActivity" />
+        <activity android:name=".activity.settings.SettingsActivity" />
     </application>
 
 </manifest>
